{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 303,
  "lineage": "ab3df5dd-e124-33ae-955e-4a9fc4711ecd",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f39dce95bd45aa",
            "domain": "vpc",
            "id": "eipalloc-055f39dce95bd45aa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-43-151.compute-1.amazonaws.com",
            "public_ip": "54.156.43.151",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elastic"
            },
            "tags_all": {
              "Name": "elastic"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "NodeJs",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:471112638415:instance/i-0fe7175dbbf9c2f3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe7175dbbf9c2f3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08abb3354950d43e3",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_ip": "18.212.168.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9f09ca512ffcbd8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de7617e1248d6251",
            "tags": {
              "Name": "NodeJs"
            },
            "tags_all": {
              "Name": "NodeJs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da8e19b883c23ec2"
            ]
          },
          "dependencies": [
            "module.master.aws_security_group.demo_nodejs",
            "module.master.aws_subnet.demo-subnet1",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "laravel",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:471112638415:instance/i-0809dda06a818898c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0809dda06a818898c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a5d1d50a80e182e",
            "private_dns": "ip-10-0-2-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.146",
            "public_ip": "3.83.219.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048364151b9ef5649",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095a3c71ffb5779c2",
            "tags": {
              "Name": "laravel"
            },
            "tags_all": {
              "Name": "laravel"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a5c6784e8c3a0381"
            ]
          },
          "dependencies": [
            "module.master.aws_security_group.demo_laravel",
            "module.master.aws_subnet.demo-subnet2",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:471112638415:instance/i-018d1f730774e40b1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018d1f730774e40b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de272e3510beaff9",
            "private_dns": "ip-10-0-3-196.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04318cc6a4a351761",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0206d0413976113bd",
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce8064998ca51a56"
            ]
          },
          "dependencies": [
            "module.master.aws_security_group.demo_db",
            "module.master.aws_subnet.demo-subnet3",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:internet-gateway/igw-0b0d977120bd31f38",
            "id": "igw-0b0d977120bd31f38",
            "owner_id": "471112638415",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055f39dce95bd45aa",
            "association_id": "eipassoc-0b3472b99348da85f",
            "connectivity_type": "public",
            "id": "nat-08454740abdc04261",
            "network_interface_id": "eni-009bf5145ed2b280f",
            "private_ip": "10.0.2.82",
            "public_ip": "54.156.43.151",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-095a3c71ffb5779c2",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            }
          },
          "dependencies": [
            "module.master.aws_eip.elastic",
            "module.master.aws_subnet.demo-subnet2",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb5037d68f7a87981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08454740abdc04261",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb5037d68f7a8798",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_eip.elastic",
            "module.master.aws_nat_gateway.gateway",
            "module.master.aws_route_table.private",
            "module.master.aws_subnet.demo-subnet2",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b0d977120bd31f38",
            "id": "r-rtb-0c367ea84e730e6a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c367ea84e730e6a8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_internet_gateway.demo-igw",
            "module.master.aws_route_table.public",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:route-table/rtb-0cb5037d68f7a8798",
            "id": "rtb-0cb5037d68f7a8798",
            "owner_id": "471112638415",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:route-table/rtb-0c367ea84e730e6a8",
            "id": "rtb-0c367ea84e730e6a8",
            "owner_id": "471112638415",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e85a7acd7282f218",
            "route_table_id": "rtb-0cb5037d68f7a8798",
            "subnet_id": "subnet-0206d0413976113bd"
          },
          "dependencies": [
            "module.master.aws_route_table.private",
            "module.master.aws_subnet.demo-subnet3",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b57aa293960151",
            "route_table_id": "rtb-0c367ea84e730e6a8",
            "subnet_id": "subnet-0de7617e1248d6251"
          },
          "dependencies": [
            "module.master.aws_route_table.public",
            "module.master.aws_subnet.demo-subnet1",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064bc7c9c7cc039ad",
            "route_table_id": "rtb-0c367ea84e730e6a8",
            "subnet_id": "subnet-095a3c71ffb5779c2"
          },
          "dependencies": [
            "module.master.aws_route_table.public",
            "module.master.aws_subnet.demo-subnet2",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_db",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:security-group/sg-0ce8064998ca51a56",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ce8064998ca51a56",
            "ingress": [],
            "name": "terraform-20240310195443963700000001",
            "name_prefix": "terraform-",
            "owner_id": "471112638415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-db"
            },
            "tags_all": {
              "Name": "demo-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_laravel",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:security-group/sg-0a5c6784e8c3a0381",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a5c6784e8c3a0381",
            "ingress": [],
            "name": "terraform-20240310195443967600000003",
            "name_prefix": "terraform-",
            "owner_id": "471112638415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-laravel"
            },
            "tags_all": {
              "Name": "demo-laravel"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_nodejs",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:security-group/sg-0da8e19b883c23ec2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0da8e19b883c23ec2",
            "ingress": [],
            "name": "terraform-20240310195443970800000005",
            "name_prefix": "terraform-",
            "owner_id": "471112638415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo_nodejs"
            },
            "tags_all": {
              "Name": "demo_nodejs"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_1",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1864110441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da8e19b883c23ec2",
            "security_group_rule_id": "sgr-09d488715c1ae3cfe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_nodejs",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_2",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-644461348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da8e19b883c23ec2",
            "security_group_rule_id": "sgr-01d925fed34ce5862",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_nodejs",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_3",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-85100838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da8e19b883c23ec2",
            "security_group_rule_id": "sgr-0137372a66deb9c45",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_nodejs",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_4",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-385090584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5c6784e8c3a0381",
            "security_group_rule_id": "sgr-0fe32164d072c2ff3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_laravel",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_5",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1602332243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a5c6784e8c3a0381",
            "security_group_rule_id": "sgr-0ad680c8040387bed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_laravel",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "port_6",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1120446298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce8064998ca51a56",
            "security_group_rule_id": "sgr-01dad680bbcf6aa56",
            "self": false,
            "source_security_group_id": "sg-0a5c6784e8c3a0381",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.demo_db",
            "module.master.aws_security_group.demo_laravel",
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet1",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:subnet/subnet-0de7617e1248d6251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de7617e1248d6251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112638415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet1"
            },
            "tags_all": {
              "Name": "demo-subnet1"
            },
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet2",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:subnet/subnet-095a3c71ffb5779c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095a3c71ffb5779c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112638415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet2"
            },
            "tags_all": {
              "Name": "demo-subnet2"
            },
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-subnet3",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:subnet/subnet-0206d0413976113bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0206d0413976113bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112638415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-subnet3"
            },
            "tags_all": {
              "Name": "demo-subnet3"
            },
            "vpc_id": "vpc-08f88a065a4ab2d6b"
          },
          "dependencies": [
            "module.master.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "module.master.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112638415:vpc/vpc-08f88a065a4ab2d6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089eaeaa9a3b2c600",
            "default_route_table_id": "rtb-0853cbce38852b76b",
            "default_security_group_id": "sg-066c79e7420184310",
            "dhcp_options_id": "dopt-07af18f20281be905",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f88a065a4ab2d6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0853cbce38852b76b",
            "owner_id": "471112638415"
          }
        }
      ]
    }
  ]
}